added murkup to index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About me</title>
 </head>
 <body>
-    
+    <h1>Pavlenko Kostiantyn</h1>
+    <section>
+        <h2>Work experience</h2>
+        <dl>
+            <dt><strong>Luxoft</strong><br><i>Apr 2022 - Present</i></dt>
+            <dd>
+                Automated project processes by creating 
+                and executing Selenium and TestCafe 
+                automation scripts to ensure quality control, 
+                reduce manual labor and expedite delivery 
+                timelines.
+            </dd>
+            <br>
+            <dt><strong>Arber Marketplace</strong><br><i>Jul 2021 - Nov 2021</i></dt>
+            <dd>
+                My responsibilities included: template making 
+                (HTML, CSS), JS, occasional database 
+                interactions, administering sites using CMS 
+                such as CS cart and WordPress.
+            </dd>
+        </dl>
+        <hr>
+    </section>
+    <section>
+        <h2>Professional skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>Maven</li>
+            <li>Selenium</li>
+            <li>TestNG</li>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
+        </ul>
+        <hr>
+    </section>
+    <section>
+        <h2>Hobbies</h2>
+        <p><b>Brazilian Jiu Jitsu</b></p>
+        <img src="./images//bjj_capy.jpg" alt="BJJ Capibara" width="200">
+    </section>
 </body>
 </html>
