added computer game hobby to murkup

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <section>
         <h2>Hobbies</h2>
         <p><b>Brazilian Jiu Jitsu</b></p>
-        <img src="./images//bjj_capy.jpg" alt="BJJ Capibara" width="200">
+        <img src="./images/bjj_capy.jpg" alt="BJJ Capybara" width="200">
+        <p><b>Computer Games</b></p>
+        <img src="./images/gamer_capy.jpg" alt="BJJ Capybara" width="200">
     </section>
 </body>
 </html>
