added external css

--- a/index.html
+++ b/index.html
@@ -4,164 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://api.fontshare.com/v2/css?f=satoshi@300,400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Registration</title>
-
-    <style>
-        *{
-            font-family: 'Satoshi', sans-serif;
-            font-size: 14px;
-        }
-        body{
-            background: #ccc;
-        }
-        .modal-window-container{
-            width: 500px;
-            margin: 0 auto;
-            background: #FFFFFF;
-        }
-        .close-button-wrapper{
-            display: flex;
-            justify-content: flex-end;
-            margin-bottom: 21px;
-        }
-        .modal-close-button{
-            width: 18px;
-            height: 18px;
-            background: none;
-            border: none;
-            margin-top: 13px;
-            margin-right: 13px;
-            padding: 0;
-            cursor: pointer;
-        }
-        .modal-content-wrapper{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            max-width: 300px;
-            margin: 0 auto;
-        }
-        .registration_button{
-            display: block;
-            background: none;
-            border: none;
-            font-size: 20px;
-            font-weight: 500;
-            padding: 0;
-        }
-        .divider{
-            color: #3D3D3D;
-            font-size: 16px;
-            margin: 0 12px;
-        }
-        .focused{
-            color: #46A358;
-        }
-        .registration-button-wrapper{
-            display: flex;
-            align-items: center;
-            margin-bottom: 40px;
-        }
-        .label-text{
-            margin: 0;
-            line-height: 16px;
-            align-self: start;
-        }
-        form{
-            margin-top: 14px;
-        }
-        .another-registration-actions-divider{
-            display: flex;
-            align-items: center;
-            margin-top: 36px;
-            margin-bottom: 27px;
-        }
-        .another-registration-actions-divider::before,
-        .another-registration-actions-divider::after{
-            content: "";
-            width: 95px;
-            border-bottom: 1px solid #EAEAEA;
-    
-        }
-        .another-registration-actions-divider::before{
-            margin-right: 7px;
-        }
-        .another-registration-actions-divider::after{
-            margin-left: 7px;
-        }
-        input{
-            display: block;
-            width: 300px;
-            box-sizing: border-box;
-            border: 1px solid #EAEAEA;
-            border-radius: 4px;
-            padding: 12px 0px 12px 14px;
-            margin-bottom: 16px;
-        }
-        .password-input-wrapper{
-            position: relative;
-        }
-        .password-input-wrapper::after{
-            content: url("./images/hide_password_icon.svg");
-            position: absolute;
-            display: inline;
-            width: 20px;
-            height: 20px;
-            top: 13px;
-            right: 13px;
-        }
-        #register-button{
-            display: block;
-
-            font-size: 16px;
-            line-height: 16px;
-            
-            font-weight: 700;
-
-            width: 300px;
-            margin: 0 auto;
-            margin-top: 41px;
-            padding: 16px 0;
-
-            background: #46A358;
-            color: #FFFFFF;
-            border: none;
-            border-radius: 4px;
-        }
-        .continue-with-button{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 300px;
-            padding-top: 13px;
-            padding-bottom: 13px;
-            margin-top: 15px;
-
-            background: #FFFFFF;
-            border: 1px solid #EAEAEA;
-            border-radius: 4px;
-
-            cursor: pointer;
-        }
-        #continue-with-facebook-button::before{
-            content: url("images/facebook_icon.svg");
-            width: 20px;
-            height: 20px;
-            margin-right: 4px;
-        }
-        #continue-with-google-button::before{
-            content: url("images/google_icon.svg");
-            width: 20px;
-            height: 20px;
-            margin-right: 9px;
-        }
-        .modal-footer-line{
-            margin-top: 40px;
-            height: 10px;
-            background: #46A358;
-        }
-    </style>
 </head>
 <body>
     <div class="modal-window-container">
