added main section and restyle header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
             </nav>
             <button id="header-login-button" class="green-button"><img src="./images/login_icon.svg" alt="" class="login-icon">Login</button>
         </header>
-    </div>    
+        <section>
+            <div class="left-side-section">
+                <h1>Welcome to GreenShop</h1>
+                <h2>Let’s Make a Better <span class="green-text">Planet</span></h2>
+                <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create an unique Urban Jungle. Order your favorite plants!</p>
+                <button id="shop-now-button" class="green-button">SHOP NOW</button>
+            </div>
+            <div class="right-side-section">
+                <img src="./images//main_section_img.png" alt="main-image">
+            </div>
+        </section>
+    </div>
 </body>
 </html>
