--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
             <button id="header-login-button" class="green-button"><img src="./images/login_icon.svg" alt="" class="login-icon">Login</button>
         </header>
-        <section>
+        <main>
             <div class="left-side-section">
                 <h1>Welcome to GreenShop</h1>
                 <h2>Let’s Make a Better <span class="green-text">Planet</span></h2>
@@ -29,7 +29,133 @@
             <div class="right-side-section">
                 <img src="./images//main_section_img.png" alt="main-image">
             </div>
-        </section>
+        </main>
+        <div class="shop-section">
+            <aside>
+                <h2>Categories</h2>
+                <ul>
+                    <li class="active-cat">House Plants</li>
+                    <li>Potter Plants</li>
+                    <li>Seeds</li>
+                    <li>Small Plants</li>
+                    <li>Big Plants</li>
+                    <li>Succulents</li>
+                    <li>Trerrariums</li>
+                    <li>Gardening</li>
+                    <li>Accessories</li>  
+                </ul>
+                <img src="./images/img-sale-banner.png" alt="sale-banner">
+            </aside>
+            <section>
+                <div class="sort-panel">
+                    <button class="sort-button active-sort">All Plants</button>
+                    <button class="sort-button">New Arrivals</button>
+                    <button class="sort-button">Sale</button>
+                    <p>Short by:</p>
+                    <button class="sort-button">Default sorting <img src="./images/icon-arrow-down.svg" alt="arrow-down"></button>
+                </div>
+                <div class="cards-wrapper">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-1.png" alt="plant-1">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Barberton Daisy</p>
+                            <p class="price green-text">$119.00</p>
+                        </div>
+                        
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-2.png" alt="plant-2">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Angel Wing Begonia</p>
+                            <p class="price green-text">$169.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-3.png" alt="plant-3">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">African Violet</p>
+                            <p class="price green-text">$199.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-4.png" alt="plant-4">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Beach Spider Lily</p>
+                            <p class="price green-text">$129.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-5.png" alt="plant-5">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Blushing Bromeliad</p>
+                            <p class="price green-text">$139.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-6.png" alt="plant-6">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Aluminum Plant</p>
+                            <p class="price green-text">$179.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-7.png" alt="plant-7">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Bird's Nest Fern</p>
+                            <p class="price green-text">$99.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-8.png" alt="plant-8">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Broadleaf Lady Palm</p>
+                            <p class="price green-text">$59.00</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./images/plants/img-plant-9.png" alt="plant-9">
+                        </div>
+                        <div class="card-details">
+                            <p class="name">Chinese Evergreen</p>
+                            <p class="price green-text">$39.00</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="pagination">
+                <ul>
+                    <li class="active-pag">1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li><img src="./images/icon-next-pag.svg" alt="next-pag"></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
