added feature bar and sales to cards

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="./images/plants/img-plant-1.png" alt="plant-1">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Barberton Daisy</p>
@@ -82,6 +87,11 @@
                         <div class="card">
                             <div class="card-img">
                                 <img src="./images/plants/img-plant-2.png" alt="plant-2">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Angel Wing Begonia</p>
@@ -91,27 +101,50 @@
 
                         <div class="card">
                             <div class="card-img">
+                                <p class="sale-flag">13% OFF</p>
                                 <img src="./images/plants/img-plant-3.png" alt="plant-3">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">African Violet</p>
-                                <p class="price green-text">$199.00</p>
+                                <div class="price-wrapper">
+                                    <p class="price green-text">$199.00</p>
+                                    <p class="actual-price">$229.00</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card-img">
+                                <p class="sale-flag">45% OFF</p>
                                 <img src="./images/plants/img-plant-4.png" alt="plant-4">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Beach Spider Lily</p>
-                                <p class="price green-text">$129.00</p>
+                                <div class="price-wrapper">
+                                    <p class="price green-text">$129.00</p>
+                                    <p class="actual-price">$239.00</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card-img">
                                 <img src="./images/plants/img-plant-5.png" alt="plant-5">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Blushing Bromeliad</p>
@@ -121,17 +154,31 @@
 
                         <div class="card">
                             <div class="card-img">
+                                <p class="sale-flag">25% OFF</p>
                                 <img src="./images/plants/img-plant-6.png" alt="plant-6">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Aluminum Plant</p>
-                                <p class="price green-text">$179.00</p>
+                                <div class="price-wrapper">
+                                    <p class="price green-text">$179.00</p>
+                                    <p class="actual-price">$239.00</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card-img">
                                 <img src="./images/plants/img-plant-7.png" alt="plant-7">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Bird's Nest Fern</p>
@@ -141,17 +188,31 @@
 
                         <div class="card">
                             <div class="card-img">
+                                <p class="sale-flag">70% OFF</p>
                                 <img src="./images/plants/img-plant-8.png" alt="plant-8">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Broadleaf Lady Palm</p>
-                                <p class="price green-text">$59.00</p>
+                                <div class="price-wrapper">
+                                    <p class="price green-text">$59.00</p>
+                                    <p class="actual-price">$199.00</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card-img">
                                 <img src="./images/plants/img-plant-9.png" alt="plant-9">
+                                <div class="feature-bar">
+                                    <button><img src="./images/card_featrure_bar_icons/icon_shopping.svg" alt="shop-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_heart.svg" alt="heart-icon"></button>
+                                    <button><img src="./images/card_featrure_bar_icons/icon_dandruff.svg" alt="dandruff-icon"></button>
+                                </div>
                             </div>
                             <div class="card-details">
                                 <p class="name">Chinese Evergreen</p>
