--- a/index.html
+++ b/index.html
@@ -14,9 +14,31 @@
                 <img src="./images/header/icon_greenforest_logo.svg" alt="greenforest-icon" class="logo-icon">
             </div>
             <nav>
-                <a href="" class="nav-link active">Home</a>
+                <a href="" class="nav-link">Home</a>
                 <a href="" class="nav-link">Shop</a>
-                <a href="" class="nav-link">Plant Care</a>
+                <a href="" class="nav-link">
+                    Plant Care
+                    <div class="nav__dropdown-menu-wrapper">
+                        <ul class="nav__dropdown-menu">
+                            <li>Drainage</li>
+                            <li>Fungicides</li>
+                            <li>Fertilizer</li>
+                            <li class="item-with-dropdown">Priming
+                                <div class="inner-dropdown-menu-wrapper">
+                                    <ul class="inner-dropdown-menu">
+                                        <li>Universal</li>
+                                        <li>For Ficus</li>
+                                        <li>For Cacti</li>
+                                        <li>For Citrus</li>
+                                        <li>For those in bloom</li>
+                                        <li>Fertilizer</li>
+                                        <li>For Orchids</li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </a>
                 <a href="" class="nav-link">Blogs</a>
             </nav>
             <div class="header__button-wrapper">
