--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
                 <button class="registration_button focused">Register</button>
             </div>
             <p class="label-text">Enter your email and password to register.</p>
-            <form>
+            <form class="registration-form">
                 <input type="text" placeholder="Username">
                 <input type="email" placeholder="Enter your email address">
                 <div class="password-input-wrapper">
