--- a/index.html
+++ b/index.html
@@ -323,6 +323,121 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-newsletter">
+                <div class="footer-newsletter__card-wrapper">
+                    <div class="footer-newsletter__information__card card-1">
+                        <div class="bg-image-container">
+                            <div class="bg-card-img"></div>
+                        </div>
+                        <h2>Garden Care</h2>
+                        <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                    </div>
+                    <div class="horizontal-divider"></div>
+                    <div class="footer-newsletter__information__card card-2">
+                        <div class="bg-image-container">
+                            <div class="bg-card-img"></div>
+                        </div>
+                        <h2>Plant Renovation</h2>
+                        <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                    </div>
+                    <div class="horizontal-divider"></div>
+                    <div class="footer-newsletter__information__card card-3">
+                        <div class="bg-image-container">
+                            <div class="bg-card-img"></div>
+                        </div>
+                        <h2>Watering Graden</h2>
+                        <p>We are an online plant shop offering a wide range of cheap and trendy plants.</p>
+                    </div>
+                </div>
+                <div class="footer-newsletter__form-block">
+                    <h2>Would you like to join newsletters?</h2>
+                    <form action="">
+                        <input type="email" placeholder="enter your email address...">
+                        <button type="submit" class="green-button">Join</button>
+                    </form>
+                    <p>We usually post offers and challenges in newsletter. We’re your online houseplant destination. We offer a wide range of houseplants and accessories shipped directly from our (green)house to yours!</p>
+                </div>
+            </div>
+            <div class="footer-contacts">
+                <div class="footer-contacts__logo">
+                    <img src="./images/header/icon_greenforest_logo.svg" alt="logo">
+                </div>
+                <div class="footer-contacts__item">
+                    <img src="./images/footer/footer_icon_location.svg" alt="location-icon">
+                    <a href="#">70 West Buckingham Ave. Farmingdale, NY 11735</a>
+                </div>
+                <div class="footer-contacts__item">
+                    <img src="./images/footer/footer_icon_message.svg" alt="email-icon">
+                    <a href="mailto:contact@greenshop.com">contact@greenshop.com</a>
+                </div>
+                <div class="footer-contacts__item">
+                    <img src="./images/footer/footer_icon_calling.svg" alt="phone-icon">
+                    <a href="tel:+88 01911 717 490">+88 01911 717 490</a>
+                </div>
+            </div>
+            <div class="footer-details">
+                <div class="footer-details__navigation">
+                    <div class="account-nav">
+                        <h2>My Account</h2>
+                        <ul>
+                            <li>My Account</li>
+                            <li>Our stores</li>
+                            <li>Contact us</li>
+                            <li>Career</li>
+                            <li>Specials</li>
+                        </ul>
+                    </div>
+                    <div class="help-guide-nav">
+                        <h2>Help & Guide</h2>
+                        <ul>
+                            <li>Help Center</li>
+                            <li>How to Buy</li>
+                            <li>Shipping & Delivery</li>
+                            <li>Product Policy</li>
+                            <li>How to Return</li>
+                        </ul>
+                    </div>
+                    <div class="categories-nav">
+                        <h2>Categories</h2>
+                        <ul>
+                            <li>House Plants</li>
+                            <li>Potter Plants</li>
+                            <li>Seeds</li>
+                            <li>Small Plants</li>
+                            <li>Accessories</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-details__social-and-payments-container">
+                    <div class="footer-details__social-media">
+                        <h2>Social Media</h2>
+                        <div class="footer-details__social-media__icons">
+                            <a href="#" class="media-icon-container">
+                                <img src="./images/footer/social-media-icons/footer_icon_facebook.svg" alt="facebook">
+                            </a>
+                            <a href="#" class="media-icon-container">
+                                <img src="./images/footer/social-media-icons/footer_icon_instagram.svg" alt="instagram">
+                            </a>
+                            <a href="#" class="media-icon-container">
+                                <img src="./images/footer/social-media-icons/footer_icon_twitter.svg" alt="twitter">
+                            </a>
+                            <a href="#" class="media-icon-container">
+                                <img src="./images/footer/social-media-icons/footer_icon_linkidin.svg" alt="linkidin">
+                            </a>
+                            <a href="#" class="media-icon-container">
+                                <img src="./images/footer/social-media-icons/footer_icon_youtube.svg" alt="youtube">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer-details__payments-methods">
+                        <h2>We accept</h2>
+                        <img src="./images/footer/footer-img-payment-methods.png" alt="img-payment-methods">
+                    </div>
+                </div>
+            </div>
+            <p class="copyright-text">© 2021 GreenShop. All Rights Reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
