added transition to the registration page via the login button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="" class="nav-link">Blogs</a>
             </nav>
             <div class="header__button-wrapper">
-                <button id="header-login-button" class="green-button"><img src="./images/login_icon.svg" alt="" class="login-icon">Login</button>
+                <a href="./registration.html" id="header-login-button" class="green-button"><img src="./images/login_icon.svg" alt="" class="login-icon">Login</a>
             </div>
         </header>
         <main>
