added custom checkboxes and preloader

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 </div>
                 <div class="footer-newsletter__form-block">
                     <h2>Would you like to join newsletters?</h2>
-                    <form action="">
+                    <form>
                         <input type="email" placeholder="enter your email address...">
                         <button type="submit" class="green-button">Join</button>
                     </form>
@@ -585,7 +585,7 @@
                     <svg class="footer-contacts__item__icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <use href="./images/sprite.svg#icon-footer-calling"></use>
                     </svg>
-                    <a href="tel:+88 01911 717 490">+88 01911 717 490</a>
+                    <a href="tel:+8801911717490">+88 01911 717 490</a>
                 </div>
             </div>
             <div class="footer-details">
