refactored paddings and footer

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
         window.onload = ()=> {
             const burgerMenuButton = document.querySelector('.burger-menu-icon');
             const header = document.querySelector('header');
-            const asideSortPanel = document.querySelector('.aside__category-wrapper');
+            const asideSortPanel = document.querySelector('aside');
             const filterButton = document.getElementById('filter-button');
 
             burgerMenuButton.addEventListener('click', ()=> {
