--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
     <title>Hlegal</title>
 </head>
 <body>
@@ -12,13 +12,13 @@
             <div class="header_logo-wrapper">
                 <div class="header_logo-icon-container">
                     <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                        <use href="./src/images/sprite.svg#header-logo-icon"></use>
+                        <use href="./dist/images/sprite.svg#header-logo-icon"></use>
                     </svg>
                 </div>
                 <div class="header_route-wrapper">
                     <div class="header_slash-icon-container">
                         <svg class="header-slash-icon" fill="none" viewBox="0 0 21 47">
-                            <use href="./src/images/sprite.svg#header-logo-slash-icon"></use>
+                            <use href="./dist/images/sprite.svg#header-logo-slash-icon"></use>
                         </svg>
                     </div>
                     <p class="header-route-text">services</p>
@@ -34,7 +34,7 @@
                 </div>
                 <nav class="nav-menu">
                     <a href="">about us</a>
-                    <a href="">services</a>
+                    <a href="/src/pages/services.html">services</a>
                     <a href="">team</a>
                     <a href="">publications</a>
                     <a href="">contact</a>
@@ -42,5 +42,6 @@
             </div>
         </div>
     </header>
+    <img src="./dist/images/team_first_img.webp" alt="">
 </body>
 </html>
