--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="../../dist/css/styles.css">
     <title>Hlegal - services</title>
 </head>
 <body>
@@ -11,13 +11,13 @@
         <div class="header_logo-wrapper">
             <div class="header_logo-icon-container">
                 <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                    <use href="./src/images/sprite.svg#header-logo-icon"></use>
+                    <use href="../images/sprite.svg#header-logo-icon"></use>
                 </svg>
             </div>
             <div class="header_route-wrapper">
                 <div class="header_slash-icon-container">
                     <svg class="header-slash-icon" fill="none" viewBox="0 0 21 47">
-                        <use href="./src/images/sprite.svg#header-logo-slash-icon"></use>
+                        <use href="../images/sprite.svg#header-logo-slash-icon"></use>
                     </svg>
                 </div>
                 <p class="header-route-text">services</p>
