added scripts task for gulp and link for home page to logo

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div class="container">
             <div class="header_logo-wrapper">
                 <div class="header_logo-icon-container">
-                    <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                        <use href="./dist/images/sprite.svg#header-logo-icon"></use>
-                    </svg>
+                    <a href="./index.html" class="home-page-link">
+                        <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
+                            <use href="./dist/images/sprite.svg#header-logo-icon"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
             <div class="header-menu">
@@ -70,9 +72,11 @@
                 <div class="header_logo-wrapper tablet">
                     <div class="header-logo-router-wrapper">
                         <div class="header_logo-icon-container">
-                            <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                                <use href="./dist/images/sprite.svg#header-logo-icon"></use>
-                            </svg>
+                            <a href="./index.html" class="home-page-link">
+                                <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
+                                    <use href="./dist/images/sprite.svg#header-logo-icon"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="burger-menu-button">
@@ -373,6 +377,6 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="./src/scripts/main.js"></script>
+    <script type="text/javascript" src="./dist/scripts/main.js"></script>
 </body>
 </html>
