--- a/src/pages/publications.html
+++ b/src/pages/publications.html
@@ -12,9 +12,11 @@
             <div class="container">
                 <div class="header_logo-wrapper">
                     <div class="header_logo-icon-container">
-                        <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                            <use href="../../dist/images/sprite.svg#header-logo-icon"></use>
-                        </svg>
+                        <a href="../../index.html" class="home-page-link">
+                            <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
+                                <use href="../../dist/images/sprite.svg#header-logo-icon"></use>
+                            </svg>
+                        </a>
                     </div>
                     <div class="header_route-wrapper">
                         <div class="header_slash-icon-container">
@@ -76,9 +78,11 @@
                     <div class="header_logo-wrapper tablet">
                         <div class="header-logo-router-wrapper">
                             <div class="header_logo-icon-container">
-                                <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
-                                    <use href="../../dist/images/sprite.svg#header-logo-icon"></use>
-                                </svg>
+                                <a href="../../index.html" class="home-page-link">
+                                    <svg class="header-logo-icon" fill="none" viewBox="0 0 130 60">
+                                        <use href="../../dist/images/sprite.svg#header-logo-icon"></use>
+                                    </svg>
+                                </a>
                             </div>
                             <div class="header_route-wrapper">
                                 <div class="header_slash-icon-container">
@@ -110,6 +114,6 @@
                 </div>
         </div>
 
-        <script type="text/javascript" src="../scripts/main.js"></script>
+        <script type="text/javascript" src="../../dist/scripts/main.js"></script>
 </body>
 </html>
