--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -55,5 +55,7 @@
                 </div>
             </div>
         </footer>
+
+        <script type="text/javascript" src="../../dist/scripts/main.js"></script>
 </body>
 </html>
